--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "path": "^0.12.7",
     "rxjs": "^5.1.0",
     "typescript": "~2.2.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "enhanced-resolve": "^3.3.0"    
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
